frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
/* ... */
.miniCalContainer .miniCalendar .body .miniRow .miniCell .miniDay:hover{
  font-size: 15px;
  line-height: 15px;
}

.calendarContainer .miniCalContainer{
  flex-grow: 0;
  flex-shrink: 0;
  /* flex-basis: 100%; */
  position: relative;
  left: -30px;
  /* right: 200px; */
  width: 400px;
  /* top: 110px; */
  /* background-color:#696969; */
  /* background-color:#000080; */

  opacity: 0.8;
}


/* This is to control the year view */
.calendar .body .yearcol {
  flex-grow: 0;
  flex-basis: calc(100%/4);
  width: calc(100%/4);
  padding: 10px;
  /* background-color: red; */
}

.calendar .body .yearcell {
  position: relative;
  height: 20em;
  /* background-color: red; */
  /* border-right: 1px solid var(--border-color); */
  overflow: hidden;
  cursor: pointer;
  background: var(--neutral-color);
  transition: 0.25s ease-out;
}

.calendar .body .yearcell .monthBox {
  /* background-image: linear-gradient(to bottom right, #43cea2 , #185a9d); */
  font-size: 20px;
  text-align: center;

  color: white;

}

.calendar .body .yearcell .monthBox:hover {
  /* font-size: 20px; */
  /* transform: scale(1.75); */
  transition: .2s ease-out;
}

.calendar .body .yearcell .yearDays {
  font-weight: 400;
  color: ;
  font-size: 100%;
  padding: .75em 0;
  border-top: 1px solid var(--border-color);
  border-bottom: 1px solid var(--border-color);
  /* background-color: red; */
}

.calendar .body .yearcell .monthcell .yearRow{
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width: 100%;
  /* background-color: red; */

}

.calendar .body .yearcell .monthcell .yearRow .monthCellCol {
  flex-grow: 0;
  flex-basis: calc(100%/7);
  width: calc(100%/7);
}

.calendar .body .yearcell .monthcell .yearRow .monthDayCell {
  position: relative;
  height: 38px;
  /* border-right: 1px solid var(--border-color); */
  line-height: 40px;
  text-align:center;
  overflow: hidden;
  cursor: pointer;
  /* background: var(--neutral-color); */
}

.calendar .body .yearcell .monthcell .yearRow .monthDayCell:hover{
  font-size: 25px;
  max-height: 2em;
  line-height: 20px;
  margin-top: 5px;
  /* margin-left: 1px; */
  /* margin-right: 1px; */
  margin-bottom: -20px;
}

/* .calendar .body .yearcell .monthcell .yearRow .monthDayCell .dayText:hover{
  font-size: 25px;
  transition: .2s ease-out;
} */



/* This is for the week view and to control the cell size */
.calendar .scrollBody .backWeekBody .hourcell {
  position: relative;
  height: 50px;
  border-left: 1px solid var(--border-color);
  border-bottom: 1px solid var(--border-color);
  overflow: hidden;
  cursor: pointer;
  background: var(--neutral-color);
  /* background: red; */
  transition: 0.25s ease-out;
  z-index: 1;
}

.calendar .scrollBody .backWeekBody .weekFlexRow{
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction:row;
  flex-wrap: wrap;
  width: 100%;
  /* background-color: blue; */
}

/* this is to hel format the list in each cell in the weekview */
.calendar .body .hourcell .monthList {
  list-style-type:none;
  width: 150%;
  position: relative;
  right: 50px;
}

/* This is to change the color of the items in the list in week view */
.calendar .body .hourcell .monthList .monthListItem{
  background-color: lightblue;
  text-align: center;
}

/* This is for the day view */
.calendar .backDayBody .daycell {
  position: relative;
  height: 50px;
  border-top: 1px solid var(--border-color);
  border-right: 1px solid var(--border-color);
  overflow: hidden;
  cursor: pointer;
  background: var(--neutral-color);
  transition: 0.25s ease-out;
  z-index: 1;
}

.calendar .body .daycell .uppertab {
  position: relative;
  height: 25px;
}

.calendar .body .daycell .monthList {
  list-style-type:none;
  width: 150%;
  position: relative;
  right: 50px;
}

.calendar .body .daycell .monthList .monthListItem{
  background-color: lightblue;
  text-align: center;
}

.calendar .body .cell:hover {
  background: var(--bg-color);
  transition: 0.5s ease-out;
}

.calendar .body .hourcell:hover {
  background: var(--bg-color);
  transition: 0.5s ease-out;
}

.calendar .body .daycell:hover {
  background: var(--bg-color);
  transition: 0.5s ease-out;
}

.calendar .body .selected {
  border-left: 10px solid transparent;
  border-image: linear-gradient(45deg, #1a8fff 0%,#53cbf1 40%);
  border-image-slice: 1;
}

/* For the sizing of the calendar, you have to fix again sometime soon
to make it adjustable */
.calendar .body .row {
  display: grid;
  grid-template-columns: repeat(7, 187px);
  grid-template-rows: repeat(6, 25px);
  grid-auto-flow: dense;
  grid-row-gap: 2px;
  grid-column-gap: 1px;
  border-bottom: 1px solid var(--border-color);
  border-right: 1px solid var(--border-color);
  /* background-color: red; */
}

.calendar .body .yearRow {
  display: grid;
  grid-template-columns: repeat(7, 216px);
  grid-template-rows: repeat(6, 25px);
  grid-auto-flow: dense;
  grid-row-gap: 2px;
  grid-column-gap: 1px;
  /* height: 10px; */
  /* border-bottom: 1px solid var(--border-color); */
  /* border-right: 1px solid var(--border-color); */
  /* background-color: red; */
}

.calendar .body .dayYearRow{
  display: grid;
  grid-template-columns: repeat(7, 46.5px);
  text-align: center;
  /* grid-template-rows: repeat(6, 25px); */
  grid-auto-flow: dense;
  border-bottom: 3px solid var(--border-color);
  /* grid-column-gap: 1px; */
  /* background-color: red; */
}



.weekDayFlex-Container .calendar .weekBody{
  display: grid;
  border-bottom: 1px solid var(--border-color);
  /* grid-auto-flow: dense; */
  grid-template-columns: repeat(7, 186px);
  grid-template-rows: repeat(48, 24.1px);
  /* background-color: red; */
  grid-column-gap: 1px;
  grid-row-gap: 1px;
  position:relative;
  top: -1202px;

}

.calendar .weekBorder {
  background-color: white;
  /* position: absolute; */
  top: 100;
  left: 1000px;
  height: 80px;
  border-bottom: 1px solid var(--border-color);
}


.calendar .body .row:last-child {
  border-bottom: none;
}
/* ... */

